--- a/front-end/css/cadastro.css
+++ b/front-end/css/cadastro.css
@@ -1,19 +1,33 @@
-#body{
-    width: 635px;
-    margin-left: 25%;
-    display: flex;
-    flex-wrap: wrap;
+*{
+    margin: 0;
+    padding: 0;
+}
+html{
+    background-color: black;
+}
+.corpo{
+    width: 100%;
+    height: 2000px;
+    background-color: black;
+}
+.box{
+    background-color: white;
+    margin-left: 18%;
+    margin-top: 150px;
+    width: 900px;
+    padding: 50px;
+    border: 4px solid rgb(17, 81, 177);
+}
+table{
 }
 table td{
-    border: 1px solid black;
+    padding-left: 40px;
+    text-align: center;
+}
+table td span{
+    text-transform: uppercase;
+}
+h2{
     text-align: center;
     text-transform: uppercase;
-    background-color: white;
-    color: black;
-    transition: all;
-
-}
-table td:hover{
-    background-color: black;
-    color: white;
 }
